--- a/src/pages/Sidebar/index.css
+++ b/src/pages/Sidebar/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: lightgray;
+  /* background-color: lightgray; */
+  font-size: 14px;
 }
