better chrome styling

--- a/src/pages/Sidebar/Sidebar.css
+++ b/src/pages/Sidebar/Sidebar.css
@@ -1,43 +1,3 @@
-li.TabContainer {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding: 8px 5px;
-  transition: 0.1s all ease-in;
-  cursor: default;
-}
-
-li.ActiveTabContainer {
-  background-color: rgb(218, 221, 222);
-}
-
-li.InactiveTabContainer:hover {
-  background-color: rgb(241, 243, 244);
-}
-
-li.NewTabIconContainer {
-  justify-content: center;
-  cursor: pointer;
-}
-
-li.NewTabIconContainer:hover {
-  background-color: rgb(218, 221, 222);
-}
-
-.Ordinal {
-  width: 20px;
-  text-align: right;
-  margin-right: 5px;
-}
-
-.ActionButton {
-  margin: 0px 10px;
-  cursor: pointer;
-  opacity: 0.5;
-  transition: 0.11s all ease-in;
-}
-
-.ActionButton:hover {
-  opacity: 1;
-  transform: scale(1.08);
+.SidebarContainer {
+  background-color: rgb(222, 225, 230);
 }
