--- a/src/pages/Sidebar/containers/TabsList/TabsList.css
+++ b/src/pages/Sidebar/containers/TabsList/TabsList.css
@@ -1,10 +1,12 @@
 .TabItem {
   /* padding: 0px 8px; */
+  width: 100%;
   display: flex;
   position: relative;
 }
 
 .TabContainerPad {
+  flex-shrink: 0;
   width: 8px;
 }
 
@@ -54,6 +56,7 @@
 }
 
 .TabFaviconContainer {
+  flex-shrink: 0;
   margin-right: 8px;
   flex-shrink: 0px;
   display: flex;
@@ -76,6 +79,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.1s ease-in;
 }
 
 .TabItem .ActionButton {
@@ -88,7 +92,7 @@
 
   border-radius: 50%;
 
-  color: rgb(86, 91, 94);
+  color: rgb(124, 128, 130);
 }
 
 .TabItem .ActionButton:hover {
