--- a/src/pages/Sidebar/containers/TabsList/SearchBar/SearchBar.css
+++ b/src/pages/Sidebar/containers/TabsList/SearchBar/SearchBar.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+input[type='search']::-webkit-search-cancel-button {
+  -webkit-appearance: searchfield-cancel-button;
+}
+
 .SearchBarInput {
   flex: 1;
   margin-left: 10px;
@@ -39,12 +43,48 @@
   background-color: rgb(252, 252, 252);
 }
 
-.SearchResultsCount {
+.SearchResultsCountContainer {
   flex-shrink: 0;
   width: 36px;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.SearchResultsCount {
+  width: 25px;
+  height: 25px;
+  font-size: 0.8rem;
+
+  background-color: #f5f5f5;
+  color: #363636;
+  border-radius: 50%;
+
   display: flex;
   justify-content: center;
   align-items: center;
 
-  color: #363636;
+  transition: all 0.1s ease-in;
+}
+
+.Searching {
+  background-color: #209cee;
+  color: #fff;
+}
+
+.CloseToSuccess {
+  background-color: #ffdd57;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.Success {
+  background-color: #23d160;
+  color: #fff;
+}
+
+.NoResults {
+  background-color: #ff3860;
+  color: #fff;
 }
