prelim context menu support

--- a/src/pages/Sidebar/containers/TabsList/SearchBar/SearchBar.css
+++ b/src/pages/Sidebar/containers/TabsList/SearchBar/SearchBar.css
@@ -45,6 +45,7 @@ input[type='search']::-webkit-search-cancel-button {
 
 .SearchResultsCountContainer {
   flex-shrink: 0;
+  margin-right: 6px;
   width: 36px;
   height: 100%;
 
