--- a/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
+++ b/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
@@ -1,15 +1,16 @@
 .react-contextmenu {
-  background-color: #fff;
+  background-color: rgb(246, 246, 246);
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   color: #373a3c;
-  font-size: 16px;
+  font-size: 14px;
   margin: 2px 0 0;
-  min-width: 160px;
+  min-width: 150px;
   outline: none;
   opacity: 0;
-  padding: 5px 0;
+  padding: 3px 0;
   pointer-events: none;
   text-align: left;
   transition: opacity 250ms ease !important;
@@ -28,19 +29,19 @@
   color: #373a3c;
   cursor: pointer;
   font-weight: 400;
-  line-height: 1.5;
-  padding: 3px 20px;
+  line-height: 1.3;
+  padding: 1px 20px;
   text-align: inherit;
   white-space: nowrap;
 }
 
 .react-contextmenu-item:hover {
   color: #fff;
-  background-color: #20a0ff;
-  border-color: #20a0ff;
+  background-color: rgb(31, 92, 209);
+  border-color: rgb(31, 92, 209);
 }
 
-.react-contextmenu-item::selection {
+.react-contextmenu-item:focus {
   outline: none;
 }
 
@@ -60,7 +61,7 @@
 }
 
 .react-contextmenu-item--divider {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.15);
   cursor: inherit;
   margin-bottom: 3px;
   padding: 2px 0;
