--- a/src/pages/Sidebar/containers/Title/SettingsBox/SettingsBox.css
+++ b/src/pages/Sidebar/containers/Title/SettingsBox/SettingsBox.css
@@ -30,6 +30,7 @@
 
 .PopoverContent .SettingEntryContent {
   margin: 6px 0px 0px 18px;
+  opacity: 0.8;
 }
 
 .PopoverContent .SettingEntryContent label {
@@ -37,8 +38,29 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  padding: 2px;
+
+  transition: all 0.1s ease-in;
+}
+
+.PopoverContent .SettingEntryContent label:hover {
+  background-color: #f2f0f0;
 }
 
 .PopoverContent .SettingEntryContent label input {
   margin-right: 6px;
+}
+
+.SettingEntryTitleIcon {
+  width: 14px;
+  height: 14px;
+  margin-right: 6px;
+  flex-shrink: 0;
+}
+
+.SettingEntryOptionIcon {
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  flex-shrink: 0;
 }
