--- a/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
+++ b/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
@@ -34,6 +34,7 @@
 
 .TabContainer {
   flex: 1;
+  min-width: 0;
   /* width: 100%; */
   display: flex;
   align-items: center;
@@ -65,6 +66,13 @@
 
 .TabTitleContainer {
   flex: 1;
+  min-width: 0;
+}
+
+.TabTitle {
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .Ordinal {
