--- a/src/pages/Sidebar/Sidebar.css
+++ b/src/pages/Sidebar/Sidebar.css
@@ -2,10 +2,7 @@
   background-color: rgb(222, 225, 230);
 }
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  .SidebarContainer {
-    color: rgb(167, 167, 167);
-    background-color: rgb(36, 36, 36);
-  }
+.SidebarContainer.Dark {
+  color: rgb(167, 167, 167);
+  background-color: rgb(36, 36, 36);
 }
