--- a/src/pages/Sidebar/containers/TabsList/TabsList.css
+++ b/src/pages/Sidebar/containers/TabsList/TabsList.css
@@ -6,6 +6,10 @@
   color: rgb(60, 64, 67);
 }
 
+.NewTabButtonContainer.Dark {
+  color: rgb(190, 193, 198);
+}
+
 .NewTabButton {
   width: 30px;
   height: 30px;
@@ -19,21 +23,14 @@
   transition: all 0.2s ease-in;
 }
 
+.NewTabButton.Dark {
+  color: rgb(190, 193, 198);
+}
+
 .NewTabButton:hover {
   background-color: rgb(203, 206, 211);
 }
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  .NewTabButtonContainer {
-    color: rgb(190, 193, 198);
-  }
-
-  .NewTabButton {
-    color: rgb(190, 193, 198);
-  }
-
-  .NewTabButton:hover {
-    background-color: rgb(68, 69, 71);
-  }
+.NewTabButton.Dark:hover {
+  background-color: rgb(68, 69, 71);
 }
