--- a/src/pages/Sidebar/containers/Title/SettingsBox/SettingsBox.css
+++ b/src/pages/Sidebar/containers/Title/SettingsBox/SettingsBox.css
@@ -9,6 +9,10 @@
     0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
 }
 
+.PopoverContainer.Dark {
+  border: 1px solid rgb(82, 82, 82);
+}
+
 .PopoverTitle {
   padding: 0.5rem 0.75rem;
   background-color: #f2f0f0;
@@ -18,14 +22,28 @@
   align-items: center;
 }
 
+.PopoverTitle.Dark {
+  background-color: rgb(51, 51, 51);
+  color: rgb(162, 162, 162);
+}
+
 .PopoverContent {
   font-size: 0.8rem;
   font-weight: 300;
 }
 
+.PopoverContent.Dark {
+  background-color: rgb(36, 36, 36);
+  color: rgb(162, 162, 162);
+}
+
 .SettingEntryDivider {
   height: 0px;
   border-bottom: 1px solid #f2f0f0;
+}
+
+.SettingEntryDivider.Dark {
+  border-bottom: 1px solid rgb(82, 82, 82);
 }
 
 .PopoverContent .SettingEntryContainer {
@@ -58,6 +76,12 @@
   background-color: #f2f0f0;
 }
 
+.PopoverContent .SettingEntryContent label.Dark:hover,
+.PopoverContent .SettingEntryContent label.Dark.Active {
+  background-color: #000;
+  color: #fff;
+}
+
 .PopoverContent .SettingEntryContent label input {
   margin-right: 6px;
 }
@@ -74,31 +98,4 @@
   height: 12px;
   margin-right: 6px;
   flex-shrink: 0;
-}
-
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  .PopoverContainer {
-    border: 1px solid rgb(82, 82, 82);
-  }
-
-  .PopoverTitle {
-    background-color: rgb(51, 51, 51);
-    color: rgb(162, 162, 162);
-  }
-
-  .SettingEntryDivider {
-    border-bottom: 1px solid rgb(82, 82, 82);
-  }
-
-  .PopoverContent {
-    background-color: rgb(36, 36, 36);
-    color: rgb(162, 162, 162);
-  }
-
-  .PopoverContent .SettingEntryContent label:hover,
-  .PopoverContent .SettingEntryContent label.Active {
-    background-color: #000;
-    color: #fff;
-  }
 }
