--- a/src/pages/Sidebar/containers/Title/Title.css
+++ b/src/pages/Sidebar/containers/Title/Title.css
@@ -15,6 +15,11 @@
     0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
 }
 
+.TitleContainer.Dark {
+  background-color: rgb(51, 51, 51);
+  color: rgb(162, 162, 162);
+}
+
 .TitleLogoContainer {
   display: flex;
   align-items: center;
@@ -76,24 +81,16 @@
   transition: all 0.2s ease-in;
 }
 
-.ActionButton:hover {
+.TitleContainer .ActionButton.Dark {
+  color: rgb(235, 235, 235);
+}
+
+.TitleContainer .ActionButton:hover {
   color: rgb(60, 64, 67);
   background-color: rgb(232, 234, 237);
 }
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  .TitleContainer {
-    background-color: rgb(51, 51, 51);
-    color: rgb(162, 162, 162);
-  }
-
-  .ActionButton {
-    color: rgb(235, 235, 235);
-  }
-
-  .ActionButton:hover {
-    color: rgb(167, 167, 167);
-    background-color: rgb(32, 32, 32);
-  }
+.TitleContainer .ActionButton.Dark:hover {
+  color: rgb(167, 167, 167);
+  background-color: rgb(32, 32, 32);
 }
