--- a/src/pages/Sidebar/containers/TabsList/SearchBar/SearchBar.css
+++ b/src/pages/Sidebar/containers/TabsList/SearchBar/SearchBar.css
@@ -33,6 +33,14 @@ input[type='search']::-webkit-search-cancel-button {
   line-height: 1.3;
 
   position: relative;
+
+  transition: 0.1s all ease-in;
+}
+
+.SearchBarInput.Dark {
+  background-color: rgb(51, 51, 51);
+  color: rgb(190, 193, 198);
+  border-color: rgb(32, 33, 36);
 }
 
 .SearchBarInput:focus {
@@ -41,6 +49,11 @@ input[type='search']::-webkit-search-cancel-button {
 
 .SearchBarInput:hover {
   background-color: rgb(252, 252, 252);
+}
+
+.SearchBarInput.Dark:hover,
+.SearchBarInput.Dark:hover {
+  background-color: rgb(41, 41, 41);
 }
 
 .SearchResultsCountContainer {
@@ -59,7 +72,7 @@ input[type='search']::-webkit-search-cancel-button {
   height: 25px;
   font-size: 0.8rem;
 
-  background-color: #f5f5f5;
+  background-color: #d5d5d5;
   color: #363636;
   border-radius: 50%;
 
