--- a/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
+++ b/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
@@ -1,10 +1,10 @@
 .react-contextmenu {
   background-color: rgb(246, 246, 246);
+  color: #373a3c;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  color: #373a3c;
   font-size: 14px;
   margin: 2px 0 0;
   min-width: 150px;
@@ -17,6 +17,11 @@
   z-index: 10000000;
 }
 
+.react-contextmenu.Dark {
+  background-color: rgb(54, 54, 54);
+  color: #d0d0d0;
+}
+
 .react-contextmenu.react-contextmenu--visible {
   opacity: 1;
   pointer-events: auto;
@@ -26,7 +31,6 @@
 .react-contextmenu-item {
   background: 0 0;
   border: 0;
-  color: #373a3c;
   cursor: pointer;
   font-weight: 400;
   line-height: 1.3;
@@ -67,9 +71,12 @@
   padding: 2px 0;
 }
 
+.react-contextmenu-item--divider.Dark {
+  border-bottom: 2px solid rgb(84, 84, 84);
+}
+
 .react-contextmenu-item--divider:hover {
   background-color: transparent;
-  border-color: rgba(0, 0, 0, 0.15);
 }
 
 .react-contextmenu-item.react-contextmenu-submenu {
