--- a/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
+++ b/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
@@ -33,10 +33,13 @@
   border: 0;
   cursor: pointer;
   font-weight: 400;
-  line-height: 1.3;
-  padding: 1px 20px;
+  line-height: 1.8;
+  padding: 1px 15px;
   text-align: inherit;
   white-space: nowrap;
+
+  display: flex;
+  align-items: center;
 }
 
 .react-contextmenu-item:hover {
