--- a/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
+++ b/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
@@ -1,51 +1,11 @@
 .TabItem {
-  /* padding: 0px 8px; */
   width: 100%;
   display: flex;
   position: relative;
-}
 
-.TabContainerPad {
-  flex-shrink: 0;
-  width: 8px;
-}
-
-.TabContainerPadActive {
-  background-color: rgb(255, 255, 255);
-}
-
-.TabContainerPadActive.Dark {
-  background-color: rgb(53, 54, 58);
-}
-
-.TabContainerPadInactiveHovering {
-  background-color: rgb(244, 245, 247);
-}
-
-.TabContainerPadInactiveHovering.Dark {
-  background-color: rgb(46, 47, 50);
-}
-
-.TabContainerLeftPadInner {
-  width: 100%;
-  height: 100%;
-  background-color: rgb(222, 225, 230);
-  border-bottom-right-radius: 8px;
-}
-
-.TabContainerLeftPadInner.Dark {
-  background-color: rgb(36, 36, 36);
-}
-
-.TabContainerRightPadInner {
-  width: 100%;
-  height: 100%;
-  background-color: rgb(222, 225, 230);
-  border-bottom-left-radius: 8px;
-}
-
-.TabContainerRightPadInner.Dark {
-  background-color: rgb(36, 36, 36);
+  /* padding: 0px 4px; */
+  margin-top: 1px;
+  box-sizing: border-box;
 }
 
 .TabContainer {
@@ -57,8 +17,8 @@
   padding: 8px 8px 8px 10px;
   cursor: default;
   color: rgb(60, 64, 67);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+  /* border-top-left-radius: 8px;
+  border-top-right-radius: 8px; */
   /* border-radius: 6px; */
 
   transition: all 0.1s ease-in;
@@ -120,11 +80,12 @@
 
   display: flex;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .TabTitle {
-  flex: 1;
-  position: relative;
+  width: 100%;
+  word-wrap: break-word;
 }
 
 .Truncated {
@@ -132,27 +93,6 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
 }
-
-/* .FadeOut {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 20px;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 20%,
-    rgba(222, 225, 230, 1) 100%
-  );
-}
-
-.FadeOutHovering {
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 20%,
-    rgba(244, 245, 247, 1) 100%
-  );
-} */
 
 .MutedIconContainer {
   margin-left: 2px;
