--- a/src/pages/Sidebar/containers/TabsList/TabsList.css
+++ b/src/pages/Sidebar/containers/TabsList/TabsList.css
@@ -34,3 +34,18 @@
 .NewTabButton.Dark:hover {
   background-color: rgb(68, 69, 71);
 }
+
+.PinnedUnpinnedDivider {
+  width: 100%;
+  height: 0.5px;
+  background-color: #999;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+.PinnedTabsContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
