--- a/src/pages/Sidebar/containers/Title/Title.css
+++ b/src/pages/Sidebar/containers/Title/Title.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 8px 16px;
+  padding: 8px 8px 8px 16px;
   z-index: 9999999;
 
   background-color: rgb(245, 245, 245);
