--- a/src/pages/Sidebar/index.css
+++ b/src/pages/Sidebar/index.css
@@ -9,3 +9,23 @@ body {
 body.Dark {
   background-color: rgb(36, 36, 36);
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
