--- a/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
+++ b/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
@@ -14,7 +14,7 @@
   /* width: 100%; */
   display: flex;
   align-items: center;
-  padding: 6px 6px 6px 8px;
+  padding: 6px 6px;
   cursor: default;
   color: rgb(60, 64, 67);
   /* border-top-left-radius: 8px;
@@ -27,7 +27,7 @@
 }
 
 .TabContainer.isPinned {
-  padding: 8px;
+  padding: 6px;
 }
 
 .TabContainer.Dark {
