--- a/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
+++ b/src/pages/Sidebar/containers/TabsList/react-contextmenu.css
@@ -15,6 +15,8 @@
   text-align: left;
   transition: opacity 250ms ease !important;
   z-index: 10000000;
+
+  user-select: none;
 }
 
 .react-contextmenu.Dark {
