--- a/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
+++ b/src/pages/Sidebar/containers/TabsList/Tab/Tab.css
@@ -169,7 +169,8 @@
 }
 
 .blink {
-  animation: blinker 1.2s linear infinite;
+  opacity: 0;
+  /* animation: blinker 1.2s linear infinite; */
 }
 
 @keyframes blinker {
